--- a/pom.xml
+++ b/pom.xml
@@ -1,114 +1,59 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.nineapps.elasticsearch.plugin.cloudwatch</groupId>
-	<artifactId>CloudwatchPlugin</artifactId>
-	<packaging>jar</packaging>
-	<version>1.1</version>
-	<name>CloudwatchPlugin</name>
-	<url>http://maven.apache.org</url>
-	<build>
-		<plugins>
-			<!-- Add/Edit items in META-INF/MANIFEST.MF -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<finalName>elasticsearch-${project.name}-${elasticsearch.version}</finalName>
-				</configuration>
-			</plugin>
-			<!-- Copy dependencies into lib folder -->
-			<!-- To see full classpath use  mvn dependency:build-classpath -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.2</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- Skip Surefire tests -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<skipTests>true</skipTests>
-					<additionalClasspathElements>
-						<additionalClasspathElement>${project.build.directory}/classes/conf</additionalClasspathElement>
-						<additionalClasspathElement>${project.build.directory}/lib</additionalClasspathElement>
-					</additionalClasspathElements>
-				</configuration>
-			</plugin>
-			<!-- Generate the release zip file (run during package step) -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2.1</version>
-				<configuration>
-					<finalName>elasticsearch-${project.name}-${elasticsearch.version}</finalName>
-					<appendAssemblyId>false</appendAssemblyId>
-					<outputDirectory>${project.build.directory}/release/</outputDirectory>
-					<descriptors>
-						<descriptor>assembly/release.xml</descriptor>
-					</descriptors>
-				</configuration>
-				<executions>
-					<execution>
-						<id>generate-release-plugin</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>	
-		</plugins>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>**/*.properties</include>
-				</includes>
-			</resource>
-		</resources>
-	</build>
-	<properties>
-		<elasticsearch.version>1.6.0</elasticsearch.version>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>${elasticsearch.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk</artifactId>
-			<version>1.10.2</version>
-		</dependency>
-	</dependencies>
-	<repositories>
-		<repository>
-			<id>sonatype</id>
-			<name>Sonatype Groups</name>
-			<url>https://oss.sonatype.org/content/groups/public/</url>
-		</repository>
-	</repositories>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <version>2.3.5</version>
+    <parent>
+        <groupId>org.elasticsearch.plugin</groupId>
+        <artifactId>plugins</artifactId>
+        <version>2.3.5</version>
+    </parent>
+    <artifactId>cloudwatch</artifactId>
+    <name>Cloudwatch Metrics Sender</name>
+    <description>Sends elasticsearch metrics to AWS CloudWatch</description>
+    <properties>
+        <license.skip>true</license.skip>
+        <elasticsearch.plugin.classname>com.elasticsearch.plugin.cloudwatch.CloudwatchPlugin</elasticsearch.plugin.classname>
+        <elasticsearch.version>2.3.5</elasticsearch.version>
+        <elasticsearch.plugin.isolated>true</elasticsearch.plugin.isolated>
+        <tests.rest.suite>cloudwatch</tests.rest.suite>
+        <tests.rest.load_packaged>false</tests.rest.load_packaged>
+        <skip.unit.tests>true</skip.unit.tests>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <amazonaws.version>1.10.69</amazonaws.version>
+        <httpcomponents.httpclient.version>4.5.2</httpcomponents.httpclient.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-cloudwatch</artifactId>
+            <version>${amazonaws.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>${amazonaws.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpcomponents.httpclient.version}</version>
+        </dependency>
+
+
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <!-- This plugin bundles a config so it can't use the standard                     assembly for plugins. -->
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/assemblies/plugin.xml</descriptor>
+                    </descriptors>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
